# Robotics_Aerial

Homework10/: HW10_sol.docx
Homework11/hw11/answer/: kalman.cpp  kf_test.cpp
Homework11/hw11/src/: data.csv  kalman.cpp  kf_test.cpp  produce_data1.py
Homework2/hw2/: CMakeLists.txt
Homework2/hw2/src/: hw2_solution.cpp
Homework4/: README.md
Homework5/: HW5.tar.xz  HW5_1.m  HW5_2.m  README.md  acc.csv
Homework6/: CMakeLists.txt  README.md
Homework6/src/: hw6.cpp  hw6_sol.cpp
Homework7/HW7/: CMakeLists.txt
Homework7/HW7/src/: ans_1.cpp  ans_2.cpp
Homework8/: README.md
Homework8/HW8/: CMakeLists.txt  package.xml
Homework9/: Attitude_controller_solution.docx  HW9 .docx
Homework9/geometric_controller/: controller.m~  quadsim.slx.autosave  quadsim.slxc  quadsim_origin.slx
Homework9/geometric_controller/slprj/_jitprj/: jitEngineAccessInfo.mat  s5dBjnkNrGQ7cR4Ag6eK8sD.mat
Homework9/geometric_controller/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s5dBjnkNrGQ7cR4Ag6eK8sD.mat
Homework9/geometric_controller/slprj/_sfprj/precompile/: OzcDBvuz67wd3LKSRog4HD.mat  autoInferAccessInfo.mat
exercise1/: README.md  lab1.sh
exercise1/first_pkg/: CMakeLists.txt  four_turtles.sh  package.xml
exercise1/first_pkg/src/: listener_2.cpp  talker_2.cpp  tutorial_1.cpp
exercise2/: README.md
exercise2/Exercise2/: CMakeLists.txt  package.xml
exercise2/Exercise2/config/: rviz_config.rviz
exercise2/Exercise2/launch/: Exercise2.launch
exercise2/Exercise2/src/: exercise2.cpp
final_project/: README.md
(+5 files in other folders)
